--- a/カンブリアン.ini
+++ b/カンブリアン.ini
@@ -821,3 +821,281 @@ Church designed by Peter Zumthor
 Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:
 Li Bai's poem written in ink and brush on paper
 
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Alvar Aalto
+
+Generates the following phrases that look like photographs taken with an electron microscope by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Peter Zumthor
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Alvar Aalto
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Le Corbusier
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Antonio Gaudí
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Le Corbusier
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:
+Li Bai's poem written in ink and brush on paper
+
+QR code
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his clown killer camera:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Alvar Aalto
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:clown killer:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Frank Lloyd Wright
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:great magician:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:elf wizard:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by  Rem Koolhaas
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:marilyn monroe:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by  Rem Koolhaas
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:the avengers:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Alvar Aalto
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:hells angels biker:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:people in people's clothes:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by  H. R. Giger.
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:battle tank:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+National Stadium designed by  H. R. Giger.
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:drone:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:whale:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:Tardigrade:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:kraken:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:Godzilla:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:evil god of cthulhu:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:VW Camper Van:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:fiat 500:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:zero fighter:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:hot air balloon:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:Andy Warhol:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Alvar Aalto
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:queen:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+"Why don't you say, ``When I say 'board!' I mean 'board!'" "
+
+"Why don't you say, ``When I say 'board!' I mean 'board!'" "
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+
+Ludwigs Architektur
+"Why don't you say, ``When I say 'board!' I mean 'board!'" "
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:blast furnace:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+``There is a symbol written on it that says ``Five Red Apples''. He hands the shopkeeper a piece of paper, and the shopkeeper opens a drawer with the symbol ``apple'' written on it. He then looks for the word "red" in the table and finds the color swatch next to it. "
+
+Wittgenstein.Ludwigs Architektur
+"Why don't you say, ``When I say 'board!' I mean 'board!'" "
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+``There is a symbol written on it that says ``Five Red Apples''. He hands the shopkeeper a piece of paper, and the shopkeeper opens a drawer with the symbol ``apple'' written on it. He then looks for the word "red" in the table and finds the color swatch next to it. "
+
+Generate the following phrases to look like pictures taken by Diane Arbus with a pinhole camera.
+Ludwigs Architektur
+`There is a symbol written on it that says ``Five Red Apples'
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Ludwigs Architektur
+`There is a symbol written on it that says ``Five Red Apples'
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:grizzly bear:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Hans Bellmer with a large format camera.
+Ludwigs Architektur
+Now, if I say, "My broom is standing in the corner," - is that really a statement about the broom handle and broom?
+
+Generates the following phrases like the architectural photographs taken by Man Ray with a large format camera.
+Ludwigs Architektur
+Now, if I say, "My broom is standing in the corner," - is that really a statement about the broom handle and broom?
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:Maurits Escher:
+Li Bai's poem written in ink and brush on paper
+
+google map
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:Maurits Escher:
+Li Bai's poem written in ink and brush on paper
+A butterfly and a butterfly in the old man So Shumu. It's neat and butterfly-like.
+I wonder if I can try it myself and see if it suits my aspirations. I don't know the surroundings. If you suddenly wake up, everything will be completely different.
+Unaware of whether she could become a butterfly in Zhou's dream or become Zhou in a butterfly's dream.
+Zhou and Kocho are indispensable. This is called becoming a thing.
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:Maurits Escher:
+Li Bai's poem written in ink and brush on paper
+The ancient butterfly of Zhuang Zhou. Kochoya.
+Self-metaphorism suitable. Shuuya Shirazu. Suddenly, Shuya Noriyuki.
+Shiranu, Zhou no Yume dan Kochoyo, Kocho no Yume dan Zhouyo.
+Zhou Yao butterfly, rule necessary portion. This so-called objectification.
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:A young man named ``Lu Sheng'' leaves his hometown without a clear goal in life and goes to Handan, the capital of Zhao. There, Lu Sheng met a Taoist named Lu Weng, and told him about his own complaints about owning only a small amount of farmland. Then, the Taoist gives Lu Sheng a pillow that will make his dreams come true. When Lusei used that pillow, he quickly got promoted, got a wife, was imprisoned on a false charge, regretted seeking fame and tried to commit suicide, was lucky to escape punishment, was cleared of false charges and was given credit for his faith. He reached the peak of glory and prosperity while regaining his status, and even became king, leading to him arrogant to the honor of his wise subjects.
+
+He was blessed with children and grandchildren and lived a happy life. However, age was not enough for him, and he died in his sleep, being missed by many people. When he suddenly woke up, the porridge he had put on the fire before going to bed had not even boiled yet. Everything was a dream and a fleeting event. Lu Sheng politely thanked Mr. Lu, who was at his bedside, and said, ``I have seen all the ups and downs of life. You paid for my desires,'' and went back to his hometown.:
+Li Bai's poem written in ink and brush on paper
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera
+:Lu Sheng politely thanked Mr. Lu, who was at his bedside, and said, ``I have seen all the ups and downs of life. You paid for my desires,'' and went back to his hometown.:
+Li Bai's poem written in ink and brush on paper
+
+King Arthur's Holy Grail
+
+Generates the following phrases like the architectural photographs taken by Maurits Escher with a large format camera.
+Ludwigs Architektur
+A writes a sequence of numbers. B looks at it and tries to find the law of the number sequence.
+
+Generates the following phrases like the architectural photographs taken by Maurits Escher with a large format camera.
+Ludwigs Architektur
+I don't know of a better term to describe this characteristic of resemblance than ``family resemblance.''
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger Architektur:
+I don't know of a better term to describe this characteristic of resemblance than ``family resemblance.''
+
+The following situation was photographed by Anna Barad using the Planetary Exploration Satellite.
+lots of white t-shirts,
+Scattered throughout the room,
+It's my brother's work.
+
+The following situation was photographed by Anna Barad using the Mars rover.
+lots of white t-shirts,
+Scattered throughout the room,
+It's my brother's work.
+
+The following situation was photographed by Anna Barad using the Mars rover's camera.
+For some reason, I don't want to make something that looks so ostentatious.
+Go for something smaller and with some flavor.
+
+Generate an image of the following situation as if it were a landscape photograph taken by Anna Barad.
+Historically, the lower chambers of the Bitter-Suzuzian War are considered to be the places where fierce battles and negotiations took place between the two sides. The two armies may have fought for control of the area, as it was a key resource and trade route. It is also possible that the area was strategically important and had a significant impact on the outcome of the war.
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger Architektur:
+Alpha and Omega
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger Architektur:
+Alpha and Omega
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:Maurits Escher:
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger Architektur:
+Survival Research Laboratories
+
+Alberto Giacometti
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger Architektur:
+Alberto Giacometti
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger Architektur:
+”From a distance, the city resembled a tower-shaped temple.
+However, judging from the internal structure,
+Rather, it's a beehive that has expanded hundreds of millions of times.
+It is better to compare it to a termite burrow.
+the reason is,
+It is very different from a single tower made of massive sun-dried bricks.
+Vavilon is a series of vaulted floors with tens of thousands of dark rooms that house all of its citizens.
+A very attractive and comprehensive description is found in Revelation 17:5.”
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger Architektur:
+”From a distance, the city resembled a tower-shaped temple.
+However, judging from the internal structure,
+Rather, it's a beehive that has expanded hundreds of millions of times.
+It is better to compare it to a termite burrow.
+the reason is,
+It is very different from a single tower made of massive sun-dried bricks.
+Vavilon is a series of vaulted floors with tens of thousands of dark rooms that house all of its citizens.
+A very attractive and comprehensive description is found in Revelation 17:5.”
+
+"The Spomenik"
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger Architektur:
+
+since then,
+These heretical people crawl aimlessly through the desert.
+sometimes,
+Is it to remind me of the curse of fate?
+A thrilling vision of an unexplored fortress appears on the horizon.
+Then, for a moment,
+People are enveloped in a fervent false bliss.
+
+
+
