酔っ払って

--- a/doc/鶏ガラのラーメンスープのレシピをお願いします.ini
+++ b/doc/鶏ガラのラーメンスープのレシピをお願いします.ini
@@ -46,3 +46,337 @@
   あなたがたはだれも、朝まで家の戸から出てはなりません。
   主がエジプト人を打ち倒すためにこの地を通過するとき、主は戸枠の上部と側面についた血を見て、その戸口を通り過ぎるでしょう。そして、破壊者があなたがたの家に侵入してあなたを打ち倒すことを主は許さないでしょう。
   従ってください
+
+  この一連の状況を、ダイアン アーバスがピンホール カメラで撮ったかのように見せます。 別のバージョンを教えてください。
+  そこでモーセはイスラエルの長老たち全員を呼んでこう言いました。
+  すぐに行って、家族のために動物を選び、過ぎ越しの子羊を屠ってください。
+  ヒソップを束にして洗面器の血に浸し、ドア枠の上部と両側に血の一部を塗ります。
+  あなたがたはだれも、朝まで家の戸から出てはなりません。
+  主がエジプト人を打ち倒すためにこの地を通過するとき、主は戸枠の上部と側面についた血を見て、その戸口を通り過ぎるでしょう。そして、破壊者があなたがたの家に侵入してあなたを打ち倒すことを主は許さないでしょう。
+  あなたとあなたの子孫に対する永続的な儀式として、これらの指示に従ってください。
+
+  この一連の様子を、ピンホールカメラを使ってNASAの無人探査機「パーサヴィアランス」が撮影したかのように捉えてください。 別のバージョンを教えてください。
+  そこでモーセはイスラエルの長老たち全員を呼んでこう言いました。
+  すぐに行って、家族のために動物を選び、過ぎ越しの子羊を屠ってください。
+  ヒソップを束にして洗面器の血に浸し、ドア枠の上部と両側に血の一部を塗ります。
+  あなたがたはだれも、朝まで家の戸から出てはなりません。
+  主がエジプト人を打ち倒すためにこの地を通過するとき、主は戸枠の上部と側面についた血を見て、その戸口を通り過ぎるでしょう。そして、破壊者があなたがたの家に侵入してあなたを打ち倒すことを主は許さないでしょう。
+  あなたとあなたの子孫に対する永続的な儀式として、これらの指示に従ってください。
+
+  この一連の状況を、オーガスト・サンダーがピンホールカメラで撮影したように見せてください。 別のバージョンを教えてください。
+オオカミと子羊は一緒になります。 ヒョウは子ヤギと一緒に横になります。 子牛と若いライオンが彼と一緒にいるでしょう。 彼は小さな子供たちを導くでしょう。
+
+この一連の状況を、ロバート メイプルソープがピンホール カメラで撮影したかのように見せます。 別のバージョンを教えてください。
+オオカミと子羊は一緒になります。 ヒョウは子ヤギと一緒に横になります。 子牛と若いライオンが彼と一緒にいるでしょう。 彼は小さな子供たちを導くでしょう。
+
+この一連の状況を、ヘルムート・ニュートンがピンホール カメラで撮影したように見せます。 別のバージョンを教えてください。
+オオカミと子羊は一緒になります。 ヒョウは子ヤギと一緒に横になります。 子牛と若いライオンが彼と一緒にいるでしょう。 彼は小さな子供たちを導くでしょう。
+
+この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。 別のバージョンを教えてください。
+オオカミと子羊は一緒になります。 ヒョウは子ヤギと一緒に横になります。 子牛と若いライオンが彼と一緒にいるでしょう。 彼は小さな子供たちを導くでしょう。
+
+この一連の状況を、ピーター・グリーナウェイがピンホールカメラで撮ったかのように見せます。 別のバージョンを教えてください。
+オオカミと子羊は一緒になります。 ヒョウは子ヤギと一緒に横になります。 子牛と若いライオンが彼と一緒にいるでしょう。 彼は小さな子供たちを導くでしょう。
+
+したがって、主ご自身があなたにしるしを与えます：処女は身ごもって男の子を産み、その子をインマヌエルと呼ぶでしょう。
+この一連の様子を、ピンホールカメラを使ってNASAの無人探査機「パーサヴィアランス」が撮影したかのように捉えてください。
+
+「ピンホール カメラを使用してダイアン アーバスのスタイルを真似て、次のシーンを撮影します。
+
+小窓からほのかな光が差し込み、薄暗い部屋に一人佇む厳かな姿。
+シンプルな木の椅子に座る妊婦。顔はカメラからわずかに背を向け、神妙な表情を浮かべている。
+産着に包まれた生まれたばかりの赤ん坊が、柔らかな拡散光に包まれて質素な飼い葉桶に横たわっている。
+赤ん坊を抱いた若い女性が、まるで目の前の奇跡を熟考しているかのように目を下に向けている。」
+
+「ジョエル・ピーター・ウィトキンがピンホールカメラで撮った写真に似た一連のシーンを作成してください。
+
+薄暗い部屋に一人で陰気な人物が立っており、不気味な影が落ちており、小さな窓からはかすかな光が差し込んでいるだけだ。
+妊婦が風化した木の椅子に座っており、顔の一部が隠れており、その表情は謎めいて忘れられない。
+生まれたばかりの赤ん坊は、粗末な布に包まれて、粗末な木のゆりかごの中に横たわっており、神秘と厳粛な雰囲気に包まれています。
+若い女性が赤ん坊を腕に抱き、畏怖と不安が入り混じった視線で赤ん坊を見つめ、薄暗い光が不気味に顔に広がっている。」
+
+「私は永遠の命に憧れ、若くありたいという願いを忘れていました。こうして私は永遠に生き続けましたが、あまりにもひどく枯れ果てたので、最終的には友人たちが私を袋に詰めて壁に掛けました。まるでジョエル・ピーターのグロテスクな創造物のようでした」 ウィトキン、私のボロボロの肌と脆弱な骨は、壁に釘付けにされたバッグから鳴り続けています。」
+
+この一連の状況を、オーガスト・サンダーがピンホールカメラで撮影したように見せてください。 別のバージョンを教えてください。
+ヤコブは夢を見ました。 夢の中で、彼は地面に階段が立っているのを見ました。
+その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。
+
+ヤコブは夢を見ました。 夢の中で、彼は地面に階段が立っているのを見ました。
+その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。
+この一連のシチュエーションをアダム・スミスがピンホールカメラで撮影したような感じにしてみてください。 別のバージョンを教えてください。
+
+ヤコブは夢を見ました。 夢の中で、彼は地面に階段が立っているのを見ました。
+その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。
+この一連の状況を、ダイアン アーバスがピンホール カメラで撮ったかのように見せます。
+
+ヤコブは夢を見ました。 夢の中で、彼は地面に階段が立っているのを見ました。
+その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。
+この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。 別のバージョンを教えてください。
+
+ヤコブは夢を見ました。 夢の中で、彼は地面に階段が立っているのを見ました。
+その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。
+この一連の状況を、ヘルムート・ニュートンがピンホール カメラで撮影したように見せます。 別のバージョンを教えてください。
+
+そこで彼は人を遣わして、ジョンを獄中で斬首させた。
+そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
+この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。 別のバージョンを教えてください。
+
+そこで彼は人を遣わして、ジョンを獄中で斬首させた。
+そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
+この一連の状況を、デヴィッド・リンチがピンホールカメラで撮影したように見せてください。
+
+そこで彼は人を遣わして、ジョンを獄中で斬首させた。
+そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
+この一連の状況を、ピーター・グリーナウェイがピンホールカメラで撮ったかのように見せます。
+
+そこで彼は人を遣わして、ジョンを獄中で斬首させた。
+そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
+この一連の状況を、ヘルムート・ニュートンがピンホール カメラで撮影したように見せます。
+
+そこで彼は人を遣わして、ジョンを獄中で斬首させた。
+そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
+この一連の状況を、オーガスト・サンダーがピンホールカメラで撮影したように見せてください。
+
+そこで彼は人を遣わして、ジョンを獄中で斬首させた。
+そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
+この一連の状況を、ダイアン アーバスがピンホール カメラで撮影したように見せます。
+
+「この調和のとれたバランスは、自然の摂理における普遍的な道であり、私たちはそれにしたがって生きるべきです。」ハッブル宇宙望遠鏡を使用したピンホールカメラで撮影されたこの一連の状況を想像してみてください。
+
+「この調和のとれたバランスこそ、自然の摂理における普遍的な道であり、私たちはそれにしたがって生きるべきである。」 この一連の様子を、あたかもNASAの無人探査機「パーサヴィアランス」が撮影したかのようにピンホールカメラで捉えてください。
+
+「この調和のとれたバランスは、自然の摂理における普遍的な道であり、私たちはそれにしたがって生きるべきです。」この一連の状況を、ダイアン・アーバスがピンホールカメラで撮影したかのように見せます。
+
+「この調和のとれたバランスは、自然の摂理における普遍的な道であり、私たちはそれにしたがって生きるべきです。」 この一連の状況を、ヘルムート・ニュートンがピンホールカメラで撮影したかのように見せてください。
+
+馬や鹿の脳から作られた楽器
+この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。
+
+「万物の始まりは、渦の力によって掻き回される混沌から生まれる。この渦の中で、無数の可能性が渦を巻き、新たな秩序を生み出す。混沌と渦は、宇宙の神秘的なダンスの一部であり、そこで私たちは自分自身を見つけるのです」 存在。"
+この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。
+
+「万物の始まりは、渦の力によって掻き回される混沌から生まれる。この渦の中で、無数の可能性が渦を巻き、新たな秩序を生み出す。混沌と渦は、宇宙の神秘的なダンスの一部であり、そこで私たちは自分自身を見つけるのです」 存在。"
+ハッブル宇宙望遠鏡を使用してピンホール カメラで撮影されたこの一連の状況を想像してください。
+
+「万物の始まりは、渦の力によって掻き回される混沌から生まれる。この渦の中で、無数の可能性が渦を巻き、新たな秩序を生み出す。混沌と渦は、宇宙の神秘的なダンスの一部であり、そこで私たちは自分自身を見つけるのです」 存在。"
+この一連の状況を、ダイアン アーバスがピンホール カメラで撮ったかのように見せます。
+
+「万物の始まりは、渦の力によって掻き回される混沌から生まれる。この渦の中で、無数の可能性が渦を巻き、新たな秩序を生み出す。混沌と渦は、宇宙の神秘的なダンスの一部であり、そこで私たちは自分自身を見つけるのです」 存在。"
+この一連の状況を、オーガスト・サンダーがピンホールカメラで撮影したように見せてください。
+
+オオカミの肺、喉、舌、歯で作られた楽器を演奏します。 狼の遠吠えが響く
+この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。
+
+オオカミの肺、喉、舌、歯で作られた楽器を演奏します。 狼の遠吠えが響く
+この一連の状況を、イニゴ・ビルバオがピンホールカメラで撮影したかのように見せます。
+
+牛の頭が空から雨のように落ちてきます。
+それが地球に滴り、人生に繁栄をもたらしますように。
+植物、木、玉ねぎ、あらゆるものが豊かです。
+牛の頭には天地の神秘が宿り、祝福をもたらします。
+あたかもイニーゴ ビルバオがピンホール カメラで撮影したかのようにこれを生成します。
+
+牛の頭が空から雨のように落ちてきます。
+それが地球に滴り、人生に繁栄をもたらしますように。
+植物、木、玉ねぎ、あらゆるものが豊かです。
+牛の頭には天地の神秘が宿り、祝福をもたらします。
+あたかも Diane Arbus がピンホール カメラで撮影したかのようにこれを生成します。
+
+「牛の骨でできた雨粒が砂漠の大地に散らばり、骨が地面に当たる衝撃を共鳴させるシーン。」
+あたかもイニーゴ ビルバオがピンホール カメラで撮影したかのようにこれを生成します。
+
+「牛の骨でできた雨粒が砂漠の大地に散らばり、骨が地面に当たる衝撃を共鳴させるシーン。」
+Joel-Peter Witkin がピンホール カメラで撮影したかのようにこれを生成します。
+
+「牛の骨でできた雨粒が砂漠の大地に散らばり、骨が地面に当たる衝撃を共鳴させるシーン。」
+あたかも Diane Arbus がピンホール カメラで撮影したかのようにこれを生成します。
+
+「牛の骨でできた雨粒が砂漠の大地に散らばり、骨が地面に当たる衝撃を共鳴させるシーン。」
+あたかもロバート メイプルソープがピンホール カメラで撮影したかのようにこれを生成します。
+
+「牛の骨でできた雨粒が砂漠の大地に散らばり、骨が地面に当たる衝撃を共鳴させるシーン。」
+あたかもヘルムート ニュートンがピンホール カメラで撮影したかのようにこれを生成します。
+
+「牛の骨でできた雨粒が砂漠の大地に散らばり、骨が地面に当たる衝撃を共鳴させるシーン。」
+あたかもナン ゴールディンがピンホール カメラで撮影したかのようにこれを生成します。
+
+最後の晩餐でセルフィーを撮るキリストと12使徒
+
+皇帝が碁石を置き、黒と白の蜂が踊ります。
+天地の神秘は碁盤に宿る。
+帝国を揺るがす石の音。
+あたかもナン ゴールディンがピンホール カメラで撮影したかのようにこれを生成します。
+
+皇帝が碁石を置き、黒と白の蜂が踊ります。
+天地の神秘は碁盤に宿る。
+帝国を揺るがす石の音。
+碁盤は蜂の巣でできた立体空間です。
+あたかもナン ゴールディンがピンホール カメラで撮影したかのようにこれを生成します。
+
+皇帝が碁石を置き、黒と白の蜂が踊ります。
+天地の神秘は碁盤に宿る。
+帝国を揺るがす石の音。
+皇帝の碁の相手はスポアという哲学者。
+碁盤は蜂の巣でできた立体空間です。
+Joel-Peter Witkin がピンホール カメラで撮影したかのようにこれを生成します。
+
+皇帝が碁石を置き、黒と白の蜂が踊ります。
+天地の神秘は碁盤に宿る。
+帝国を揺るがす石の音。
+皇帝の碁の相手はスポアという哲学者。
+碁盤は蜂の巣でできた立体空間です。
+あたかも Diane Arbus がピンホール カメラで撮影したかのようにこれを生成します。
+
+あたかもイニーゴ ビルバオがピンホール カメラで撮影したかのようにこれを生成します。
+
+蜂がたくさん飛び回っています
+
+この画像を元の写真に戻してください。ロバート メイプルソープがピンホール カメラで撮ったかのように生成してください。
+
+円相
+
+同じ時間に、男の手の指が現れて、王の宮殿の壁の漆喰の燭台の反対側に文字を書き、王はその手の指が書いているのを見ました。
+あたかもイニーゴ ビルバオがピンホール カメラで撮影したかのようにこれを生成します。
+
+ヘプタポッドは円形の表語文字を書きます。
+
+魚が飛び跳ね、村が浮かび、景色が輝く。
+響く波の音、幻想的な夢、空虚、自他の交流。
+Joel-Peter Witkin がピンホール カメラで撮影したかのようにこれを生成します。
+
+魚が飛び跳ね、村が浮かび、景色が輝く。
+響く波の音、幻想的な夢、空虚、自他の交流。
+あたかもロバート メイプルソープがピンホール カメラで撮影したかのようにこれを生成します。
+
+魚が飛び跳ね、村が浮かび、景色が輝く。
+響く波の音、幻想的な夢、空虚、自他の交流。
+あたかもナン ゴールディンがピンホール カメラで撮影したかのようにこれを生成します。
+
+魚が飛び跳ね、村が浮かび、景色が輝く。
+響く波の音、幻想的な夢、空虚、自他の交流。
+アダム スミスがピンホール カメラで撮影したかのようにこれを生成します。
+
+ゴッホの自撮り
+
+白い服を着たツインテールのエルフの魔法使いの女の子。
+ジョエル・ピーター・ウィトキンは、あたかもピンホール カメラで撮影したかのようにこの作品を制作しています。
+
+ゴッホがスマートフォンで撮影した写真をインスタグラムに投稿
+
+ゴッホの自撮り写真がインスタグラムに投稿
+
+鏡に映った自分のセルフィーを撮るゴッホ
+
+ハンプティ・ダンプティの
+ジョエル・ピーター・ウィトキンは、あたかもピンホール カメラで撮影したかのようにこの作品を制作しています。
+
+ハンプティ・ダンプティの
+Diane Arbus は、あたかもピンホール カメラで撮影したかのようにこの作品を制作しました。
+
+ハンプティ・ダンプティが木から落ちる。
+Diane Arbus は、あたかもピンホール カメラで撮影したかのようにこの作品を制作しました。
+
+ナンセンは片手に猫、もう一方の手には草刈り鎌を持ち、恐ろしい表情で弟子たちを睨みつけた。 それまで活発に議論していた弟子達だったが、師ナンセンの強さに皆恐れをなし、言葉を失った。 その後、ナンセンは持っていた草刈り鎌で猫の首をはねたと言われています。
+
+自撮りするザッカーバーグ
+
+川岸に沿って並べられたボウルは高くそびえ立ち、その水はインクのように溶け合っていました。
+川の流れと混ざり合う墨色の色合いは、その奥深さが心に響くはずです。
+ジョエル・ピーター・ウィトキンは、あたかもピンホール カメラで撮影したかのようにこの作品を制作しています。
+
+三船千鶴子は心霊写真を使って自撮りをしている。
+ジョエル・ピーター・ウィトキンは、あたかもピンホール カメラで撮影したかのようにこの作品を制作しています。
+
+三船千鶴子は心霊写真を使って自撮りをしている。
+Diane Arbus は、あたかもピンホール カメラで撮影したかのようにこの作品を制作しました。
+
+三船千鶴子は心霊写真を使って自撮りをしている。
+あたかもヘルムート・ニュートンがピンホールカメラで撮ったかのようにこれを生成します。
+
+三船千鶴子は心霊写真を使って自撮りをしている。
+あたかもイニーゴ ビルバオがピンホール カメラで撮影したかのようにこれを生成します。
+
+山村貞子はメンタルフォトグラフィーを使って自撮りをしています。
+あたかもイニーゴ ビルバオがピンホール カメラで撮影したかのようにこれを生成します。
+
+山村貞子、メンタルフォトグラフィーを使用してビデオテープに自撮り写真を撮る
+
+山村貞子、メンタルフォトグラフィーを使用してビデオテープに自撮り写真を撮る
+ジョエル・ピーター・ウィトキンは、あたかもピンホール カメラで撮影したかのようにこの作品を制作しています。
+
+貞子はメンタルフォトグラフィーを使用してビデオテープに自撮り写真を撮ります。
+ジョエル・ピーター・ウィトキンは、あたかもピンホール カメラで撮影したかのようにこの作品を制作しています。
+
+貞子はメンタルフォトグラフィーを使用してビデオテープに自撮り写真を撮ります。
+あたかもナン ゴールディンがピンホール カメラで撮影したかのようにこれを生成します。
+
+貞子は心の写真を使ってビデオテープに自撮り写真を撮る
+監視カメラモニター映像より
+
+貞子は井戸から出てくる自分の姿を望遠撮影でビデオテープに撮ります。
+ジョエル・ピーター・ウィトキンは、あたかもピンホール カメラで撮影したかのようにこの作品を制作しています。
+
+貞子はメンタルフォトを使って自撮りをする。
+Diane Arbus は、あたかもピンホール カメラで撮影したかのようにこの作品を制作しました。
+
+貞子はメンタルフォトを使って自撮りをする。
+あたかもナン ゴールディンがピンホール カメラで撮影したかのようにこれを生成します。
+
+ドローンで上空から撮った自撮り写真。
+
+雨の中、ドローンで上空から撮影した自撮り写真。
+これを北斎風にアレンジしてみましょう。
+
+とろけるチーズ、ジューシーなトマトソース、ペパロニ、マッシュルーム、ブラック オリーブなどのさまざまなトッピングを備えたおいしいピザ。アツアツで新鮮な、高解像度の、様式化された、食材ととろけるチーズに焦点を当てた状態で提供されます。
+
+すべてのノードのイメージ
+写真を自撮り写真を撮っているエージェント スミスに変更します。
+
+鼻水が龍となって身動きできなくなり、涙が滝のように流れ、空へ上がっていきます。 生命の息吹、龍の力は、やがて虚に還る。
+Diane Arbus は、あたかもピンホール カメラで撮影したかのようにこの作品を制作しました。
+
+鼻水が龍となって身動きできなくなり、涙が滝のように流れ、空へ上がっていきます。 生命の息吹、龍の力は、やがて虚に還る。
+あたかもナン ゴールディンがピンホール カメラで撮影したかのようにこれを生成します。
+
+鼻水が龍となって身動きできなくなり、涙が滝のように流れ、空へ上がっていきます。 生命の息吹、龍の力は、やがて虚に還る。
+アダム スミスがピンホール カメラで撮影したかのようにこれを生成します。
+
+鼻水が龍となって身動きできなくなり、涙が滝のように流れ、空へ上がっていきます。 生命の息吹、龍の力は、やがて虚に還る。
+あたかもイニーゴ ビルバオがピンホール カメラで撮影したかのようにこれを生成します。
+
+花の真ん中、ワインの水差し、
+近くに友達もいないのに一人で酒を飲む。
+明るい月を招くように杯を上げて、
+三人になると私の影が歓声を上げる。
+
+ああ、月には飲酒が理解できない、
+そして私の影は私の体の導きに従うだけです。
+儚い仲間たち、月と影、
+春の行為の前の瞬間を楽しんでいます。
+
+月は私の歌とともに残り続ける、
+私の影が、私の踊りとともに、辺りに散らばる。
+素面で、私たちは一緒に喜びを分かち合います、
+酔っ払って、それぞれが束縛されずに自分の道を行きます。
+
+この報われない喜びを永遠に分かち合いましょう
+遠く離れていても、広大な天の光の下で。
+
+花の真ん中、ワインの水差し、
+近くに友達もいないのに一人で酒を飲む。
+明るい月を招くように杯を上げて、
+三人になると私の影が歓声を上げる。
+
+ああ、月には飲酒が理解できない、
+そして私の影は私の体の導きに従うだけです。
+儚い仲間たち、月と影、
+春の行為の前の瞬間を楽しんでいます。
+
+月は私の歌とともに残り続ける、
+私の影が、私の踊りとともに、辺りに散らばる。
+素面で、私たちは一緒に喜びを分かち合います、
+酔っ払って、それぞれが束縛されずに自分の道を行きます。
+
+
+
+
