主ご自身があなたにしるし

--- a/japanese.ini
+++ b/japanese.ini
@@ -6,23 +6,7 @@
 主がエジプト人を打ち倒すためにこの地を通過するとき、主は戸枠の上部と側面についた血を見て、その戸口を通り過ぎるでしょう。そして、破壊者があなたがたの家に侵入してあなたを打ち倒すことを主は許さないでしょう。
 あなたとあなたの子孫に対する永続的な儀式として、これらの指示に従ってください。
 
-  この一連の状況を、オーガスト・サンダーがピンホールカメラで撮影したように見せてください。 別のバージョンを教えてください。
-オオカミと子羊は一緒になります。 ヒョウは子ヤギと一緒に横になります。 子牛と若いライオンが彼と一緒にいるでしょう。 彼は小さな子供たちを導くでしょう。
-
-この一連の状況を、ロバート メイプルソープがピンホール カメラで撮影したかのように見せます。 別のバージョンを教えてください。
-オオカミと子羊は一緒になります。 ヒョウは子ヤギと一緒に横になります。 子牛と若いライオンが彼と一緒にいるでしょう。 彼は小さな子供たちを導くでしょう。
-
-この一連の状況を、ヘルムート・ニュートンがピンホール カメラで撮影したように見せます。 別のバージョンを教えてください。
-オオカミと子羊は一緒になります。 ヒョウは子ヤギと一緒に横になります。 子牛と若いライオンが彼と一緒にいるでしょう。 彼は小さな子供たちを導くでしょう。
-
-この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。 別のバージョンを教えてください。
-オオカミと子羊は一緒になります。 ヒョウは子ヤギと一緒に横になります。 子牛と若いライオンが彼と一緒にいるでしょう。 彼は小さな子供たちを導くでしょう。
-
-この一連の状況を、ピーター・グリーナウェイがピンホールカメラで撮ったかのように見せます。 別のバージョンを教えてください。
-オオカミと子羊は一緒になります。 ヒョウは子ヤギと一緒に横になります。 子牛と若いライオンが彼と一緒にいるでしょう。 彼は小さな子供たちを導くでしょう。
-
-したがって、主ご自身があなたにしるしを与えます：処女は身ごもって男の子を産み、その子をインマヌエルと呼ぶでしょう。
-この一連の様子を、ピンホールカメラを使ってNASAの無人探査機「パーサヴィアランス」が撮影したかのように捉えてください。
+この一連の状況を、オーガスト・サンダー、ロバート・メイプルソープ、ヘルムート・ニュートン、ジョエル・ピーター・ウィトキン、ピーター・グリーナウェイがピンホールカメラで撮影したかのように見せてください。したがって、主ご自身があなたにしるしを与えます：処女は身ごもって男の子を産み、その子をインマヌエルと呼ぶでしょう。この一連の様子を、NASAの無人探査機「パーサヴィアランス」が撮影したかのように捉えてください。
 
 「ピンホール カメラを使用してダイアン アーバスのスタイルを真似て、次のシーンを撮影します。
 
