ヤコブは夢を見ました

--- a/japanese.ini
+++ b/japanese.ini
@@ -24,49 +24,7 @@
 
 「私は永遠の命に憧れ、若くありたいという願いを忘れていました。こうして私は永遠に生き続けましたが、あまりにもひどく枯れ果てたので、最終的には友人たちが私を袋に詰めて壁に掛けました。まるでジョエル・ピーターのグロテスクな創造物のようでした」 ウィトキン、私のボロボロの肌と脆弱な骨は、壁に釘付けにされたバッグから鳴り続けています。」
 
-この一連の状況を、オーガスト・サンダーがピンホールカメラで撮影したように見せてください。 別のバージョンを教えてください。
-ヤコブは夢を見ました。 夢の中で、彼は地面に階段が立っているのを見ました。
-その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。
-
-ヤコブは夢を見ました。 夢の中で、彼は地面に階段が立っているのを見ました。
-その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。
-この一連のシチュエーションをアダム・スミスがピンホールカメラで撮影したような感じにしてみてください。 別のバージョンを教えてください。
-
-ヤコブは夢を見ました。 夢の中で、彼は地面に階段が立っているのを見ました。
-その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。
-この一連の状況を、ダイアン アーバスがピンホール カメラで撮ったかのように見せます。
-
-ヤコブは夢を見ました。 夢の中で、彼は地面に階段が立っているのを見ました。
-その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。
-この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。 別のバージョンを教えてください。
-
-ヤコブは夢を見ました。 夢の中で、彼は地面に階段が立っているのを見ました。
-その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。
-この一連の状況を、ヘルムート・ニュートンがピンホール カメラで撮影したように見せます。 別のバージョンを教えてください。
-
-そこで彼は人を遣わして、ジョンを獄中で斬首させた。
-そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
-この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。 別のバージョンを教えてください。
-
-そこで彼は人を遣わして、ジョンを獄中で斬首させた。
-そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
-この一連の状況を、デヴィッド・リンチがピンホールカメラで撮影したように見せてください。
-
-そこで彼は人を遣わして、ジョンを獄中で斬首させた。
-そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
-この一連の状況を、ピーター・グリーナウェイがピンホールカメラで撮ったかのように見せます。
-
-そこで彼は人を遣わして、ジョンを獄中で斬首させた。
-そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
-この一連の状況を、ヘルムート・ニュートンがピンホール カメラで撮影したように見せます。
-
-そこで彼は人を遣わして、ジョンを獄中で斬首させた。
-そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
-この一連の状況を、オーガスト・サンダーがピンホールカメラで撮影したように見せてください。
-
-そこで彼は人を遣わして、ジョンを獄中で斬首させた。
-そして彼の首は大皿に乗せられて女の子に渡され、女の子はそれを母親のところに持って行きました。
-この一連の状況を、ダイアン アーバスがピンホール カメラで撮影したように見せます。
+この一連の状況を、オーガスト・サンダー、ロバート・メイプルソープ、ヘルムート・ニュートン、ジョエル・ピーター・ウィトキン、ピーター・グリーナウェイがピンホールカメラで撮影したように見せてください。別のバージョンを教えてください。ヤコブは夢を見ました。夢の中で、彼は地面に階段が立っているのを見ました。その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。また、そこで彼は人を遣わして、ジョンを獄中で斬首させ、その首が大皿に乗せられて女の子に渡され、母親のところに持って行かれる様子を、デヴィッド・リンチがピンホールカメラで撮影したかのように見せます。これらの状況を、オーガスト・サンダー、ダイアン・アーバスがピンホールカメラで撮影したかのように捉えてください。
 
 「この調和のとれたバランスは、自然の摂理における普遍的な道であり、私たちはそれにしたがって生きるべきです。」ハッブル宇宙望遠鏡を使用したピンホールカメラで撮影されたこの一連の状況を想像してみてください。
 
