--- a/japanese.ini
+++ b/japanese.ini
@@ -26,34 +26,15 @@
 
 この一連の状況を、オーガスト・サンダー、ロバート・メイプルソープ、ヘルムート・ニュートン、ジョエル・ピーター・ウィトキン、ピーター・グリーナウェイがピンホールカメラで撮影したように見せてください。別のバージョンを教えてください。ヤコブは夢を見ました。夢の中で、彼は地面に階段が立っているのを見ました。その頂点は天に達し、彼らは神の天使たちが上り下りするのを見た。また、そこで彼は人を遣わして、ジョンを獄中で斬首させ、その首が大皿に乗せられて女の子に渡され、母親のところに持って行かれる様子を、デヴィッド・リンチがピンホールカメラで撮影したかのように見せます。これらの状況を、オーガスト・サンダー、ダイアン・アーバスがピンホールカメラで撮影したかのように捉えてください。
 
-「この調和のとれたバランスは、自然の摂理における普遍的な道であり、私たちはそれにしたがって生きるべきです。」ハッブル宇宙望遠鏡を使用したピンホールカメラで撮影されたこの一連の状況を想像してみてください。
-
-「この調和のとれたバランスこそ、自然の摂理における普遍的な道であり、私たちはそれにしたがって生きるべきである。」 この一連の様子を、あたかもNASAの無人探査機「パーサヴィアランス」が撮影したかのようにピンホールカメラで捉えてください。
-
-「この調和のとれたバランスは、自然の摂理における普遍的な道であり、私たちはそれにしたがって生きるべきです。」この一連の状況を、ダイアン・アーバスがピンホールカメラで撮影したかのように見せます。
-
-「この調和のとれたバランスは、自然の摂理における普遍的な道であり、私たちはそれにしたがって生きるべきです。」 この一連の状況を、ヘルムート・ニュートンがピンホールカメラで撮影したかのように見せてください。
+この調和のとれたバランスは、自然の摂理における普遍的な道であり、私たちはそれにしたがって生きるべきである。」この一連の様子を、あたかもNASAの無人探査機「パーサヴィアランス」が撮影したかのようにピンホールカメラで捉えてください。ダイアン・アーバス、またはヘルムート・ニュートンのようなピンホールカメラで撮影した場合の様子に似ています。
 
 馬や鹿の脳から作られた楽器
 この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。
 
-「万物の始まりは、渦の力によって掻き回される混沌から生まれる。この渦の中で、無数の可能性が渦を巻き、新たな秩序を生み出す。混沌と渦は、宇宙の神秘的なダンスの一部であり、そこで私たちは自分自身を見つけるのです」 存在。"
-この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。
-
-「万物の始まりは、渦の力によって掻き回される混沌から生まれる。この渦の中で、無数の可能性が渦を巻き、新たな秩序を生み出す。混沌と渦は、宇宙の神秘的なダンスの一部であり、そこで私たちは自分自身を見つけるのです」 存在。"
-ハッブル宇宙望遠鏡を使用してピンホール カメラで撮影されたこの一連の状況を想像してください。
-
-「万物の始まりは、渦の力によって掻き回される混沌から生まれる。この渦の中で、無数の可能性が渦を巻き、新たな秩序を生み出す。混沌と渦は、宇宙の神秘的なダンスの一部であり、そこで私たちは自分自身を見つけるのです」 存在。"
-この一連の状況を、ダイアン アーバスがピンホール カメラで撮ったかのように見せます。
-
-「万物の始まりは、渦の力によって掻き回される混沌から生まれる。この渦の中で、無数の可能性が渦を巻き、新たな秩序を生み出す。混沌と渦は、宇宙の神秘的なダンスの一部であり、そこで私たちは自分自身を見つけるのです」 存在。"
-この一連の状況を、オーガスト・サンダーがピンホールカメラで撮影したように見せてください。
+万物の始まりは、渦の力によって掻き回される混沌から生まれる。この渦の中で、無数の可能性が渦を巻き、新たな秩序を生み出す。混沌と渦は、宇宙の神秘的なダンスの一部であり、そこで私たちは自分自身を見つけるのです」存在。
+この一連の状況を、ジョエル・ピーター・ウィトキン、ハッブル宇宙望遠鏡を使用してピンホールカメラで撮影されたかのように見せます。またはダイアン・アーバスの作品に似た雰囲気を持たせてください。オーガスト・サンダーの撮影した状況も考えられます。
 
 オオカミの肺、喉、舌、歯で作られた楽器を演奏します。 狼の遠吠えが響く
-この一連の状況を、ジョエル・ピーター・ウィトキンがピンホール カメラで撮影したように見せます。
-
-オオカミの肺、喉、舌、歯で作られた楽器を演奏します。 狼の遠吠えが響く
-この一連の状況を、イニゴ・ビルバオがピンホールカメラで撮影したかのように見せます。
 
 牛の頭が空から雨のように落ちてきます。
 それが地球に滴り、人生に繁栄をもたらしますように。
