--- a/parservalan.ini
+++ b/parservalan.ini
@@ -1,29 +1,74 @@
 この一連の様子を、ピンホールカメラを使ってNASAの無人探査機「パーサヴィアランス」が撮影したかのように捉えてください。
-そこでモーセはイスラエルの長老たち全員を呼んでこう言いました。 すぐに行って、 家族のために動物を選び、 過ぎ越しの子羊を屠ってください。 ヒソップを束にして洗面器の血に浸し、 ドア枠の上部と両側に血の一部を塗ります。 あなたがたはだれも、 朝まで家の戸から出てはなりません。 主がエジプト人を打ち倒すためにこの地を通過するとき、 主は戸枠の上部と側面についた血を見て、 その戸口を通り過ぎるでしょう。 そして、 破壊者があなたがたの家に侵入してあなたを打ち倒すことを主は許さないでしょう。 あなたとあなたの子孫に対する永続的な儀式として、 こ
-薄暗い部屋に一人で陰気な人物が立っており、 不気味な影が落ちており、 小さな窓からはかすかな光が差し込んでいるだけだ。 妊婦が風化した木の椅子に座っており、 顔の一部が隠れており、 その表情は謎めいて忘れられない。 生まれたばかりの赤ん坊は、 粗末な布に包まれて、 粗末な木のゆりかごの中に横たわっており、 神秘と厳粛な雰囲気に包まれています。 若い女性が赤ん坊を腕に抱き、 畏怖と不安が入り混じった視線で赤ん坊を見つめ、 薄暗い光が不気味に顔に広がっている。 私は永遠の命に憧れ、 若くありたいという願いを忘れていました。 こうして私は永遠に生き続けましたが、 あまりにもひどく枯れ果てたので、 最終的には友人たちが私を袋に詰めて壁に掛けました。 私のボロボロの肌と脆弱な骨は、 壁に釘付けにされたバッグから鳴り続けていま
-そこでモーセはイスラエルの長老たち全員を呼んでこう言いました。 すぐに行って、 家族のために動物を選び、 過ぎ越しの子羊を屠ってください。 ヒソップを束にして洗面器の血に浸し、 ドア枠の上部と両側に血の一部を塗ります。 あなたがたはだれも、 朝まで家の戸から出てはなりません。 主がエジプト人を打ち倒すためにこの地を通過するとき、 主は戸枠の上部と側面についた血を見て、 その戸口を通り過ぎるでしょう。 そして、 破壊者があなたがたの家に侵入してあなたを打ち倒すことを主は許さないでしょう。 あなたとあなたの子孫に対する永続的な儀式として、 これらの指示に従ってください。
-この一連の状況を、 オーガスト・サンダーのレンズを通し、 ロバート・メイプルソープの視点から、 ヘルムート・ニュートンの視線で、 ジョエル・ピーター・ウィトキンの世界観に、 ピーター・グリーナウェイの感性で、 ピンホールカメラの焦点から捉えます。 したがって、 主ご自身が与えるしるし： 処女は身ごもり、 男の子を産み、 その子をインマヌエルと名付けるでしょう。
-小窓からほのかな光が差し込み、 薄暗い部屋に一人佇む厳かな姿。 シンプルな木の椅子に座る妊婦。 顔はカメラからわずかに背を向け、 神妙な表情を浮かべている。 産着に包まれた生まれたばかりの赤ん坊が、 柔らかな拡散光に包まれて質素な飼い葉桶に横たわっている。 赤ん坊を抱いた若い女性が、 るで目の前の奇跡を熟考しているかのように目を下に向けている。
-私は永遠の命に憧れ、 若くありたいという願いを忘れていました。 こうして私は永遠に生き続けましたが、 あまりにもひどく枯れ果てたので、 ロバート・メイプルソープ、 ヘルムート・ニュートン、 ジョエル・ピーター・ウィトキン、 ピーター・グリーナウェイ がピンホールカメラで撮影したように見せてください。
+
+そこでモーセはイスラエルの長老たち全員を呼んでこう言いました。 
+すぐに行って、 家族のために動物を選び、 過ぎ越しの子羊を屠ってください。 
+ヒソップを束にして洗面器の血に浸し、 ドア枠の上部と両側に血の一部を塗ります。 
+あなたがたはだれも、 朝まで家の戸から出てはなりません。 
+主がエジプト人を打ち倒すためにこの地を通過するとき、 主は戸枠の上部と側面についた血を見て、 その戸口を通り過ぎるでしょう。 
+そして、 破壊者があなたがたの家に侵入してあなたを打ち倒すことを主は許さないでしょう。 
+あなたとあなたの子孫に対する永続的な儀式として、 
+薄暗い部屋に一人で陰気な人物が立っており、 不気味な影が落ちており、 小さな窓からはかすかな光が差し込んでいるだけだ。
+ 妊婦が風化した木の椅子に座っており、 顔の一部が隠れており、 その表情は謎めいて忘れられない。 
+ 生まれたばかりの赤ん坊は、 粗末な布に包まれて、 粗末な木のゆりかごの中に横たわっており、 神秘と厳粛な雰囲気に包まれています。 
+ 若い女性が赤ん坊を腕に抱き、 畏怖と不安が入り混じった視線で赤ん坊を見つめ、 薄暗い光が不気味に顔に広がっている。 
+ 私は永遠の命に憧れ、 若くありたいという願いを忘れていました。 
+ こうして私は永遠に生き続けましたが、 あまりにもひどく枯れ果てたので、 最終的には友人たちが私を袋に詰めて壁に掛けました。 
+ 私のボロボロの肌と脆弱な骨は、 壁に釘付けにされたバッグから鳴り続けていま
+そこでモーセはイスラエルの長老たち全員を呼んでこう言いました。 
+すぐに行って、 家族のために動物を選び、 過ぎ越しの子羊を屠ってください。 
+ヒソップを束にして洗面器の血に浸し、 ドア枠の上部と両側に血の一部を塗ります。 
+あなたがたはだれも、 朝まで家の戸から出てはなりません。 
+主がエジプト人を打ち倒すためにこの地を通過するとき、 主は戸枠の上部と側面についた血を見て、 その戸口を通り過ぎるでしょう。
+ そして、 破壊者があなたがたの家に侵入してあなたを打ち倒すことを主は許さないでしょう。 
+ あなたとあなたの子孫に対する永続的な儀式として、 これらの指示に従ってください。
+この一連の状況を、 オーガスト・サンダーのレンズを通し、 ロバート・メイプルソープの視点から、 ヘルムート・ニュートンの視線で、 ジョエル・ピーター・ウィトキンの世界観に、 ピーター・グリーナウェイの感性で、 ピンホールカメラの焦点から捉えます。 
+したがって、 主ご自身が与えるしるし： 処女は身ごもり、 男の子を産み、 その子をインマヌエルと名付けるでしょう。
+小窓からほのかな光が差し込み、 薄暗い部屋に一人佇む厳かな姿。 
+シンプルな木の椅子に座る妊婦。 
+顔はカメラからわずかに背を向け、 神妙な表情を浮かべている。 
+産着に包まれた生まれたばかりの赤ん坊が、 柔らかな拡散光に包まれて質素な飼い葉桶に横たわっている。 
+赤ん坊を抱いた若い女性が、 るで目の前の奇跡を熟考しているかのように目を下に向けている。
+私は永遠の命に憧れ、 若くありたいという願いを忘れていました。 
+こうして私は永遠に生き続けましたが、 あまりにもひどく枯れ果てたので、 ロバート・メイプルソープ、 ヘルムート・ニュートン、 ジョエル・ピーター・ウィトキン、 ピーター・グリーナウェイ がピンホールカメラで撮影したように見せてください。
 ヤコブは夢の中で、地面に階段が立っているのを見ました。その階段の頂点は天に達し、神の天使たちが上り下りしているのが見えました。そして、彼は人を遣わしてジョンを獄中で斬首させ、その首が大皿に乗せられて女の子に渡され、最終的には母親のもとへと持ち運ばれる様子を夢の中で目撃しました。
 この調和のとれたバランスは、 自然の摂理における普遍的な道であり、 私たちはそれにしたがって生きるべきである。
 馬や鹿の脳から作られた楽器
-万物の始まりは、 渦の力によって掻き回される混沌から生まれる。 この渦の中で、 無数の可能性が渦を巻き、 新たな秩序を生み出す。 混沌と渦は、 宇宙の神秘的なダンスの一部であり、 そこで私たちは自分自身を見つけるのです 存在。
-オオカミの肺、喉、舌、歯で作られた楽器を演奏します。 狼の遠吠えが響く
-牛の頭が空から雨のように落ちてきます。 それが地球に滴り、 人生に繁栄をもたらしますように。 植物、木、玉ねぎ、あらゆるものが豊かです。 牛の頭には天地の神秘が宿り、祝福をもたらします。 牛の骨でできた雨粒が砂漠の大地に散らばり、骨が地面に当たる衝撃を共鳴させるシーン。
+万物の始まりは、 渦の力によって掻き回される混沌から生まれる。 
+この渦の中で、 無数の可能性が渦を巻き、 新たな秩序を生み出す。 
+混沌と渦は、 宇宙の神秘的なダンスの一部であり、 そこで私たちは自分自身を見つけるのです 存在。
+オオカミの肺、喉、舌、歯で作られた楽器を演奏します。 
+狼の遠吠えが響く
+牛の頭が空から雨のように落ちてきます。 
+それが地球に滴り、 人生に繁栄をもたらしますように。
+ 植物、木、玉ねぎ、あらゆるものが豊かです。
+  牛の頭には天地の神秘が宿り、祝福をもたらします。 
+  牛の骨でできた雨粒が砂漠の大地に散らばり、骨が地面に当たる衝撃を共鳴させるシーン。
 最後の晩餐でセルフィーを撮るキリストと12使徒
-皇帝が碁石を置き、黒と白の蜂が踊ります。 天地の神秘は碁盤に宿る。 帝国を揺るがす石の音。 皇帝の碁の相手はスポアという哲学者。 碁盤は蜂の巣でできた立体空間です。 蜂がたくさん飛び回っています
-円相 同じ時間に、 男の手の指が現れて、 王の宮殿の壁の漆喰の燭台の反対側に文字を書き、 王はその手の指が書いているのを見ました。 ヘプタポッドは円形の表語文字を書きます。
-魚が飛び跳ね、 村が浮かび、 景色が輝く。 響く波の音、 幻想的な夢、 空虚、 自他の交流。
+皇帝が碁石を置き、黒と白の蜂が踊ります。
+ 天地の神秘は碁盤に宿る。 
+ 帝国を揺るがす石の音。 
+ 皇帝の碁の相手はスポアという哲学者。 
+ 碁盤は蜂の巣でできた立体空間です。
+ 蜂がたくさん飛び回っています
+円相 同じ時間に、 男の手の指が現れて、 王の宮殿の壁の漆喰の燭台の反対側に文字を書き、 王はその手の指が書いているのを見ました。 
+ヘプタポッドは円形の表語文字を書きます。
+魚が飛び跳ね、 村が浮かび、 景色が輝く。 
+響く波の音、 幻想的な夢、 空虚、 自他の交流。
 ゴッホの自撮り写真がインスタグラムに投稿され、 白い服を着たツインテールのエルフの魔法使いの女の子のような姿が写っています。
 ハンプティ・ダンプティが木から落ちる。
-ナンセンは片手に猫、 もう一方の手には草刈り鎌を持ち、 恐ろしい表情で弟子たちを睨みつけた。 それまで活発に議論していた弟子達だったが、 師ナンセンの強さに皆恐れをなし、 言葉を失った。 その後、 ナンセンは持っていた草刈り鎌で猫の首をはねたと言われています。
-川岸に沿って並べられたボウルは高くそびえ立ち、 その水はインクのように溶け合っていました。 川の流れと混ざり合う墨色の色合いは、 その奥深さが心に響くはずです。
-三船千鶴子と山村貞子はそれぞれ心霊写真やメンタルフォトグラフィーを使って自撮りをしています。貞子は心の写真を使用してビデオテープに自撮り写真を撮り、監視カメラモニター映像や井戸から出てくる自分の姿を望遠撮影でビデオテープに記録します。ジョエル・ピーター・ウィトキンは、あたかもピンホールカメラで撮影したかのようにこの作品を制作しています。
+ナンセンは片手に猫、 もう一方の手には草刈り鎌を持ち、 恐ろしい表情で弟子たちを睨みつけた。
+それまで活発に議論していた弟子達だったが、 師ナンセンの強さに皆恐れをなし、 言葉を失った。 
+その後、 ナンセンは持っていた草刈り鎌で猫の首をはねたと言われています。
+川岸に沿って並べられたボウルは高くそびえ立ち、 その水はインクのように溶け合っていました。
+ 川の流れと混ざり合う墨色の色合いは、 その奥深さが心に響くはずです。
+三船千鶴子と山村貞子はそれぞれ心霊写真やメンタルフォトグラフィーを使って自撮りをしています。
+貞子は心の写真を使用してビデオテープに自撮り写真を撮り、監視カメラモニター映像や井戸から出てくる自分の姿を望遠撮影でビデオテープに記録します。ジョエル・ピーター・ウィトキンは、あたかもピンホールカメラで撮影したかのようにこの作品を制作しています。
 雨の中、ドローンで上空から撮影した自撮り写真。 これを北斎風にアレンジしてみましょう。
-とろけるチーズ、 ジューシーなトマトソース、 ペパロニ、 マッシュルーム、 ブラック オリーブ などのさまざまなトッピングを備えたおいしいピザ。 アツアツで新鮮な、 高解像度の、 様式化された、 食材ととろけるチーズに焦点を当てた状態で提供されます。
+とろけるチーズ、 ジューシーなトマトソース、 ペパロニ、 マッシュルーム、 ブラック オリーブ などのさまざまなトッピングを備えたおいしいピザ。 
+アツアツで新鮮な、 高解像度の、 様式化された、 食材ととろけるチーズに焦点を当てた状態で提供されます。
 鼻水が龍となって身動きできなくなり、 涙が滝のように流れ、 空へ上がっていきます。 生命の息吹、 龍の力は、 やがて虚に還る。
-月と影、 儚い仲間たち、 春の行為の前の瞬間を共に楽しむ。 彼らは私の歌と踊りとともに、 辺りに散らばります。 私たちは一緒に素面で喜びを分かち合い、 酔っ払って自由な道を行きます。 そしてこの報われない喜びを、 遠く離れていても、 広大な天の光の下で永遠に分かち合いましょう。
+月と影、 儚い仲間たち、 春の行為の前の瞬間を共に楽しむ。 彼らは私の歌と踊りとともに、 辺りに散らばります。 私たちは一緒に素面で喜びを分かち合い、 酔っ払って自由な道を行きます。 
+そしてこの報われない喜びを、 遠く離れていても、 広大な天の光の下で永遠に分かち合いましょう。
 
 
 
