エミリーディキンソン１

--- a/written1.ini
+++ b/written1.ini
@@ -9,8 +9,10 @@
 その階段の頂点は天に達し、神の天使たちが上り下りしているのが見えました。
 そして、彼は人を遣わしてジョンを獄中で斬首させ、その首が大皿に乗せられて女の子に渡され、
 最終的には母親のもとへと持ち運ばれる様子を夢の中で目撃しました。
+
+この一連の状況を、
 (
-　　　この一連の状況を、オーガスト・サンダーのレンズを通し、
+　　　オーガスト・サンダーのレンズを通し、
 　　　ロバート・メイプルソープの視点から、
 　　　ヘルムート・ニュートンの視線で、
 　　　ジョエル・ピーター・ウィトキンの世界観に、
@@ -35,7 +37,10 @@
 三船千鶴子と山村貞子はそれぞれ念写カメラを使って自撮りをしています。
 貞子は念写カメラを使用してビデオテープに自撮り動画を撮り、監視カメラのモニター映像や井戸から出てくる自分の姿を望遠撮影でビデオテープに記録します。
 
-ジョエル・ピーター・ウィトキンは、あたかもピンホールカメラで撮影したかのようにこの作品を制作しています。
+ジョエル・ピーター・ウィトキンは、
+あたかもピンホールカメラで撮影したかのようにこの作品を制作しています。
 
 雨の中、ドローンで上空から撮影した自撮り写真。 
+
+それでは、
 これを北斎風にアレンジしてみましょう。
