一つにまとめる

--- a/牛の骨.ini
+++ b/牛の骨.ini
@@ -1,4 +1,5 @@
-これらの状況を、
+
+この一連の状況を、
 オーガスト・サンダー、
 ダイアン・アーバス
 がピンホールカメラで撮影したかのように捉えてください。
@@ -7,14 +8,12 @@
 自然の摂理における普遍的な道であり、
 私たちはそれにしたがって生きるべきである。
 
-
 ダイアン・アーバス、
 または
 ヘルムート・ニュートンのような
 ピンホールカメラで撮影した場合の様子に似ています。
 
 馬や鹿の脳から作られた楽器
-
 
 万物の始まりは、
 渦の力によって掻き回される混沌から生まれる。
@@ -33,7 +32,7 @@
 またはダイアン・アーバスの作品に似た雰囲気を持たせてください。
 オーガスト・サンダーの撮影した状況も考えられます。
 
-オオカミの肺、喉、舌、歯で作られた楽器を演奏します。 
+オオカミの肺、喉、舌、歯で作られた楽器を演奏します。
 狼の遠吠えが響く
 
 牛の頭が空から雨のように落ちてきます。
