ランダムに並べ変え

--- a/牛の骨.ini
+++ b/牛の骨.ini
@@ -1,8 +1,7 @@
-
-この一連の状況を、
+この一連の状況は、
 オーガスト・サンダー、
 ダイアン・アーバス
-がピンホールカメラで撮影したかのように捉えてください。
+がピンホールカメラで撮影した。
 
 この調和のとれたバランスは、
 自然の摂理における普遍的な道であり、
@@ -10,8 +9,8 @@
 
 ダイアン・アーバス、
 または
-ヘルムート・ニュートンのような
-ピンホールカメラで撮影した場合の様子に似ています。
+ヘルムート・ニュートンが
+ピンホールカメラで撮影した。
 
 馬や鹿の脳から作られた楽器
 
@@ -28,9 +27,9 @@
 
 この一連の状況を、
 ジョエル・ピーター・ウィトキン、
-ハッブル宇宙望遠鏡を使用してピンホールカメラで撮影されたかのように見せます。
-またはダイアン・アーバスの作品に似た雰囲気を持たせてください。
-オーガスト・サンダーの撮影した状況も考えられます。
+ハッブル宇宙望遠鏡を使用してピンホールカメラで撮影された。
+またはダイアン・アーバス。
+オーガスト・サンダーが撮影した。
 
 オオカミの肺、喉、舌、歯で作られた楽器を演奏します。
 狼の遠吠えが響く
@@ -42,4 +41,5 @@
 
 牛の頭には天地の神秘が宿り、祝福をもたらします。
 
-牛の骨でできた雨粒が砂漠の大地に散らばり、骨が地面に当たる衝撃を共鳴させるシーン。
+牛の骨でできた雨粒が砂漠の大地に散らばり、
+骨が地面に当たる衝撃を共鳴させるシーン。
